--- a/test/demo.html
+++ b/test/demo.html
@@ -8,7 +8,7 @@
 <meta name="description" content="laypage是一款多功能的js分页组件，主要应用于前端页面Ajax普通分页以及信息流加载，并且可无缝迁移至Node.js平台。laypage不依赖于任何第三方库，直接拿来用即可，它的接口继承了layui系列组件的一贯简洁，极易上手。那么，从现在开始，将分页的任务交给laypage吧！">
 <link href="demo.css" type="text/css" rel="stylesheet">
 
-<script src="http://zz:100/res/lay/lib/laypage/laypage.js"></script>
+<script src="http://res.sentsin.com/lay/lib/laypage/laypage.js?v=1.2"></script>
 </head>
 <body>
 
